--- a/V2 ECF Declaration Forecast.ipynb
+++ b/V2 ECF Declaration Forecast.ipynb
@@ -152,7 +152,7 @@
         "The main purpose of this dataframe is to lay the foundation onto which actual and projected values for the key metrics can aggregated consistently to.\n",
         "\n",
         "**Notes:**\n",
-        "The statement mapping for 2021 is not realistic and only used so that it aligns with the other cohorts. This allows us to aggregate data at the same points in time but for 2021 but only Participant Volumes are measured by the dates referenced within."
+        "The statement mapping for 2021 is not realistic and only used so that it aligns with the other cohorts. This allows us to aggregate data at the same points in time but for 2021 but only Participant Volumes are measured by the dates referenced within. Check this"
       ],
       "metadata": {
         "id": "Nrt_wYDisC9F"
